fixed css so header displays properly on mobile

--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -1,5 +1,5 @@
 .root{
-    position:absolute;
+    
     right: 20px;
    
 }
